ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

nobase_include_HEADERS = \
bm/bm_apps/notifications.h \
bm/bm_apps/packet_pipe.h
if COND_THRIFT
nobase_include_HEADERS += \
bm/bm_apps/learn.h
endif

if COND_THRIFT
nobase_include_HEADERS += \
bm/bm_runtime/bm_runtime.h
endif

nobase_include_HEADERS += \
bm/bm_sim/action_entry.h \
bm/bm_sim/action_profile.h \
bm/bm_sim/actions.h \
bm/bm_sim/ageing.h \
bm/bm_sim/bignum.h \
bm/bm_sim/bytecontainer.h \
bm/bm_sim/calculations.h \
bm/bm_sim/checksums.h \
bm/bm_sim/conditionals.h \
bm/bm_sim/context.h \
bm/bm_sim/control_flow.h \
bm/bm_sim/counters.h \
bm/bm_sim/data.h \
bm/bm_sim/debugger.h \
bm/bm_sim/deparser.h \
bm/bm_sim/dev_mgr.h \
bm/bm_sim/entries.h \
bm/bm_sim/enums.h \
bm/bm_sim/event_logger.h \
bm/bm_sim/expressions.h \
bm/bm_sim/extern.h \
bm/bm_sim/fields.h \
bm/bm_sim/field_lists.h \
bm/bm_sim/handle_mgr.h \
bm/bm_sim/headers.h \
bm/bm_sim/header_stacks.h \
bm/bm_sim/learning.h \
bm/bm_sim/logger.h \
bm/bm_sim/lookup_structures.h \
bm/bm_sim/match_error_codes.h \
bm/bm_sim/match_tables.h \
bm/bm_sim/match_units.h \
bm/bm_sim/match_key_types.h \
bm/bm_sim/meters.h \
bm/bm_sim/named_p4object.h \
bm/bm_sim/nn.h \
bm/bm_sim/options_parse.h \
bm/bm_sim/P4Objects.h \
bm/bm_sim/packet.h \
bm/bm_sim/packet_buffer.h \
bm/bm_sim/packet_handler.h \
bm/bm_sim/parser.h \
bm/bm_sim/parser_error.h \
bm/bm_sim/pcap_file.h \
bm/bm_sim/phv.h \
bm/bm_sim/phv_forward.h \
bm/bm_sim/phv_source.h \
bm/bm_sim/pipeline.h \
bm/bm_sim/port_monitor.h \
bm/bm_sim/pre.h \
bm/bm_sim/queue.h \
bm/bm_sim/queueing.h \
bm/bm_sim/ras.h \
bm/bm_sim/runtime_interface.h \
bm/bm_sim/short_alloc.h \
bm/bm_sim/stateful.h \
bm/bm_sim/switch.h \
bm/bm_sim/simple_pre.h \
bm/bm_sim/simple_pre_lag.h \
bm/bm_sim/tables.h \
bm/bm_sim/target_parser.h \
bm/bm_sim/transport.h
