ir_SOURCES += \
	ir/base.cpp \
	ir/configuration.h \
	ir/dbprint.cpp \
	ir/dbprint-expression.cpp \
	ir/dbprint.h \
	ir/dbprint-p4.cpp \
	ir/dump.cpp \
	ir/expression.cpp \
	ir/id.h \
	ir/ir.cpp \
	ir/ir-generated.cpp \
	ir/ir.h \
	ir/ir-inline.h \
	ir/namemap.h \
	ir/node.cpp \
	ir/node.h \
	ir/parameterSubstitution.h \
	ir/pass_manager.cpp \
	ir/pass_manager.h \
	ir/substitution.cpp \
	ir/substitution.h \
	ir/substitutionVisitor.cpp \
	ir/substitutionVisitor.h \
	ir/type.cpp \
	ir/v1.cpp \
	ir/vector.h \
	ir/visitor.cpp \
	ir/visitor.h \
	ir/write_context.cpp

ir_DEF_FILES += \
    $(srcdir)/ir/base.def \
    $(srcdir)/ir/type.def \
    $(srcdir)/ir/expression.def \
    $(srcdir)/ir/ir.def \
    $(srcdir)/ir/v1.def

cpplint_FILES += $(ir_SOURCES)
