# Copyright 2013-present Barefoot Networks, Inc. 
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

noinst_LIBRARIES += libp4ctoolkit.a
libp4ctoolkit_a_SOURCES = \
	lib/algorithm.h  \
	lib/alloc.h  \
	lib/bitops.h  \
	lib/bitvec.cpp \
	lib/bitvec.h  \
	lib/crash.cpp \
	lib/cstring.cpp \
	lib/cstring.h  \
	lib/default.h \
	lib/enumerator.h \
	lib/error.cpp \
	lib/error.h  \
	lib/exceptions.h  \
	lib/gc.cpp \
	lib/gc.h \
	lib/gmputil.cpp \
	lib/gmputil.h \
	lib/hex.cpp\
	lib/hex.h  \
	lib/indent.cpp \
	lib/indent.h  \
	lib/json.cpp \
	lib/json.h \
	lib/log.cpp \
	lib/log.h  \
	lib/ltbitmatrix.h  \
	lib/map.h  \
	lib/match.cpp \
	lib/match.h  \
	lib/null.h \
	lib/nullstream.cpp \
	lib/nullstream.h  \
	lib/options.cpp \
	lib/options.h \
	lib/ordered_set.h  \
	lib/path.cpp \
	lib/path.h  \
	lib/range.h  \
	lib/sourceCodeBuilder.h \
	lib/source_file.cpp \
	lib/source_file.h  \
	lib/stringify.cpp \
	lib/stringify.h  \
	lib/stringref.h

cpplint_FILES += $(libp4ctoolkit_a_SOURCES)
