# Copyright 2013-present Barefoot Networks, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Makefile for mid-ends

midend_SOURCES = \
	midend/actionsInlining.cpp \
	midend/actionsInlining.h \
	midend/actionSynthesis.cpp \
	midend/actionSynthesis.h \
	midend/convertEnums.h \
	midend/convertEnums.cpp \
	midend/inlining.cpp \
	midend/inlining.h \
	midend/interpreter.h \
	midend/interpreter.cpp \
	midend/local_copyprop.cpp \
	midend/local_copyprop.h \
	midend/localizeActions.cpp \
	midend/localizeActions.h \
	midend/moveConstructors.cpp \
	midend/moveConstructors.h \
	midend/parserUnroll.h \
	midend/parserUnroll.cpp \
	midend/parserControlFlow.h \
	midend/parserControlFlow.cpp \
	midend/removeParameters.cpp \
	midend/removeParameters.h \
	midend/removeReturns.cpp \
	midend/removeReturns.h \
	midend/removeLeftSlices.cpp \
	midend/removeLeftSlices.h \
	midend/simplifyKey.h \
	midend/simplifyKey.cpp \
	midend/simplifySelect.cpp \
	midend/simplifySelect.h \
	midend/validateProperties.cpp \
	midend/validateProperties.h

cpplint_FILES += $(midend_SOURCES)
